# tennis_analysis_and_gambling

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
tennis_analysis_and_gambling/: cleaning.py  config.py  feature_engineering.py  utils.py
tennis_analysis_and_gambling/app/: config.py  main.py  main_views.py  sidebar.py
tennis_analysis_and_gambling/app/pages/: head_to_head.py
tests/: test_feature_engineering.py  tests_cleaning.py  tests_utils.py
tests/data_test/: example_atp_2023.xlsx  example_atp_2024.xlsx
